--- a/PRN211_HE170436_Project/Views/Products/Index.cshtml
+++ b/PRN211_HE170436_Project/Views/Products/Index.cshtml
@@ -52,7 +52,7 @@
                 <h5 class="font-weight-semi-bold mb-4">Filter by color</h5>
                 <form id="color-filter-form">
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" val="all" checked id="color-all">
+                        <input type="checkbox" class="custom-control-input" val="all" id="color-all">
                         <label class="custom-control-label" for="price-all">All Color</label>
                         <span class="badge border font-weight-normal">1000</span>
                     </div>
@@ -89,7 +89,7 @@
                 <h5 class="font-weight-semi-bold mb-4">Filter by size</h5>
                 <form id="size-filter-form">    
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" val="all" checked id="size-all">
+                        <input type="checkbox" class="custom-control-input" val="all" id="size-all">
                         <label class="custom-control-label" for="size-all">All Size</label>
                         <span class="badge border font-weight-normal">1000</span>
                     </div>
