--- a/PRN211_HE170436_Project/Views/Shared/_Product.cshtml
+++ b/PRN211_HE170436_Project/Views/Shared/_Product.cshtml
@@ -8,7 +8,15 @@
         <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
             <h6 class="text-truncate mb-3">@Model.ProductName</h6>
             <div class="d-flex justify-content-center">
-                <h6>$@(Model.ProductPrice * (1 - Model.ProductDiscount))</h6><h6 class="text-muted ml-2"><del>$@Model.ProductPrice</del></h6>
+                @if (Model.ProductDiscount != 0) {
+                    <h6>$@(Model.ProductPrice * (1 - Model.ProductDiscount))</h6>
+                    <h6><del>$@Model.ProductPrice</del></h6>
+                }
+                @if(Model.ProductDiscount <= 0)
+                {
+                    <h6>$@Model.ProductPrice</h6>
+                }
+
             </div>
         </div>
         <div class="card-footer d-flex justify-content-between bg-light border">
